[gd_scene load_steps=53 format=3 uid="uid://dqaxloj2f6ui0"]

[ext_resource type="Script" path="res://scripts/Level.gd" id="1_caplr"]
[ext_resource type="Texture2D" uid="uid://vgjtrcq8cn3t" path="res://sprites/monster_sproutling.png" id="1_f5wi5"]
[ext_resource type="Texture2D" uid="uid://cgn36c3g7xii2" path="res://sprites/margin.png" id="1_o76r0"]
[ext_resource type="Shader" path="res://shaders/pixelated_background.gdshader" id="2_q81jx"]
[ext_resource type="Texture2D" uid="uid://cl6lk5tp00bov" path="res://sprites/table.png" id="2_y5807"]
[ext_resource type="Script" path="res://scripts/Animated BG.gd" id="3_fwrbc"]
[ext_resource type="Texture2D" uid="uid://bx124nkaqkrm8" path="res://sprites/book.png" id="3_oe0m2"]
[ext_resource type="Texture2D" uid="uid://b6qw5x8p3dh0a" path="res://sprites/bar_frames.png" id="4_ccafu"]
[ext_resource type="Script" path="res://scripts/IndicatorContainer.gd" id="4_i8sd8"]
[ext_resource type="Texture2D" uid="uid://dpxa1u5iljjnr" path="res://sprites/bar_labels.png" id="5_25ox0"]
[ext_resource type="Texture2D" uid="uid://biwn3glws21bo" path="res://sprites/time_orb.png" id="5_mj770"]
[ext_resource type="Script" path="res://scripts/TimeOrb.gd" id="6_4xvvv"]
[ext_resource type="Texture2D" uid="uid://dvrcs54d1ndg7" path="res://sprites/bar_time.png" id="7_4sejn"]
[ext_resource type="Texture2D" uid="uid://c6u7bmv1qgo57" path="res://sprites/bottle3.png" id="8_o604l"]
[ext_resource type="Texture2D" uid="uid://bnqr4j3hgta8t" path="res://sprites/bar_sanity.png" id="8_t83gj"]
[ext_resource type="Texture2D" uid="uid://dqry0da64ct8u" path="res://sprites/bottle4.png" id="9_fpdu2"]
[ext_resource type="Texture2D" uid="uid://cuu37hajkvki" path="res://sprites/bottle1.png" id="9_ftjdy"]
[ext_resource type="Script" path="res://scripts/Book.gd" id="10_5juax"]
[ext_resource type="Texture2D" uid="uid://dqmgphuqmrmo2" path="res://sprites/bottle2.png" id="10_h022f"]
[ext_resource type="Script" path="res://scripts/Draggable.gd" id="11_fxfq5"]
[ext_resource type="Texture2D" uid="uid://sh2xldp6p1cr" path="res://sprites/bottle4 open.png" id="12_fbpnl"]
[ext_resource type="Texture2D" uid="uid://bcwcda62yn3md" path="res://sprites/bottle3 open.png" id="13_fdd1i"]
[ext_resource type="Texture2D" uid="uid://kqlqqxl3hmjq" path="res://sprites/bottle2 open.png" id="14_bsjys"]
[ext_resource type="Texture2D" uid="uid://ctdg0edjta8k0" path="res://sprites/book_spot.png" id="14_q41w2"]
[ext_resource type="Texture2D" uid="uid://dpk0gq8avs52d" path="res://sprites/cup_small.png" id="15_83ufa"]
[ext_resource type="Texture2D" uid="uid://6kr4fx2bmk64" path="res://sprites/bottle1_open.png" id="15_t8b5s"]
[ext_resource type="Texture2D" uid="uid://c18twlbvu7lny" path="res://sprites/book_overlay.png" id="16_aju8d"]
[ext_resource type="AudioStream" uid="uid://bgku4n6bn7r8p" path="res://sounds/book_close.wav" id="16_xenet"]
[ext_resource type="AudioStream" uid="uid://basg1pxknis60" path="res://sounds/book_open.wav" id="17_dwnyw"]
[ext_resource type="AudioStream" uid="uid://ddsm587wkgry6" path="res://sounds/bottle_open4.wav" id="19_vhx3s"]
[ext_resource type="AudioStream" uid="uid://dkyli1kgj36x8" path="res://sounds/bottle_open3.wav" id="22_1wlhp"]
[ext_resource type="Script" path="res://scripts/Area2DOutOfBounds.gd" id="24_jmn7c"]
[ext_resource type="AudioStream" uid="uid://bw0rlxrva7dg8" path="res://sounds/bottle_open1.wav" id="25_1qirx"]
[ext_resource type="AudioStream" uid="uid://7lw1b6bkuyfd" path="res://sounds/bottle_open2.wav" id="25_u8pld"]
[ext_resource type="AudioStream" uid="uid://dod8vq8kumsga" path="res://sounds/cup.wav" id="32_v6p5g"]
[ext_resource type="Texture2D" uid="uid://c7k6btop63xjv" path="res://sprites/cup_medium.png" id="34_c6xdm"]
[ext_resource type="Texture2D" uid="uid://crb82o18qpi1o" path="res://sprites/cup_large.png" id="35_u16au"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fw7h2"]
shader = ExtResource("2_q81jx")
shader_parameter/transparency = 1.0
shader_parameter/color0 = Color(0.105882, 0.0823529, 0.419608, 1)
shader_parameter/color1 = Color(0.239216, 0.160784, 0.733333, 1)
shader_parameter/color2 = Color(0.329412, 0.392157, 0.819608, 1)
shader_parameter/color3 = Color(0.39, 0.52, 1, 1)
shader_parameter/Direction = Vector2(1, 1)
shader_parameter/Speed = 10.0
shader_parameter/thresholds = PackedFloat32Array(0.5, 0.7, 0.8)
shader_parameter/OCTAVE = 6
shader_parameter/pixel_size = 400
shader_parameter/dithering = 2.25

[sub_resource type="CanvasTexture" id="CanvasTexture_klxyk"]
diffuse_texture = ExtResource("7_4sejn")
texture_filter = 1

[sub_resource type="CanvasTexture" id="CanvasTexture_ohgur"]
diffuse_texture = ExtResource("8_t83gj")
texture_filter = 1

[sub_resource type="CanvasTexture" id="CanvasTexture_n1bsg"]
diffuse_texture = ExtResource("1_f5wi5")
texture_filter = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_svdcj"]
size = Vector2(389, 12)

[sub_resource type="CanvasTexture" id="CanvasTexture_dgkbj"]
diffuse_texture = ExtResource("2_y5807")
texture_filter = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4satd"]
size = Vector2(400, 26)

[sub_resource type="CanvasTexture" id="CanvasTexture_or7gx"]
diffuse_texture = ExtResource("3_oe0m2")
texture_filter = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_08a4j"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_y21k3"]
radius = 19.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c07jn"]
size = Vector2(14, 30)

[sub_resource type="CanvasTexture" id="CanvasTexture_p4c3i"]
diffuse_texture = ExtResource("1_o76r0")
texture_filter = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4fqae"]
size = Vector2(6, 211)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4pb45"]
size = Vector2(5, 211)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0u3q2"]
size = Vector2(648, 20)

[node name="Level" type="Node"]
script = ExtResource("1_caplr")
cycle = 1

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Animated BG" type="ColorRect" parent="UI"]
material = SubResource("ShaderMaterial_fw7h2")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -108.0
offset_right = 25.0
offset_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_fwrbc")

[node name="Node2D" type="Control" parent="UI"]
anchors_preset = 0
offset_left = 264.0
offset_top = 17.0
offset_right = 392.0
offset_bottom = 39.0
mouse_filter = 1
script = ExtResource("4_i8sd8")

[node name="TimeOrb" type="Sprite2D" parent="UI/Node2D"]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(105, 12.5)
texture = ExtResource("5_mj770")
script = ExtResource("6_4xvvv")

[node name="Sprite2D" type="Sprite2D" parent="UI/Node2D/TimeOrb"]
texture_filter = 1
position = Vector2(0, -2)

[node name="BarFrame" type="Sprite2D" parent="UI/Node2D"]
texture_filter = 1
position = Vector2(42, 11.5)
texture = ExtResource("4_ccafu")

[node name="BarLabels" type="Sprite2D" parent="UI/Node2D"]
unique_name_in_owner = true
visible = false
texture_filter = 1
position = Vector2(59, 18.5)
texture = ExtResource("5_25ox0")

[node name="TimeBar" type="TextureProgressBar" parent="UI/Node2D"]
layout_mode = 0
offset_left = 13.0
offset_top = 6.0
offset_right = 81.0
offset_bottom = 11.0
mouse_filter = 2
max_value = 68.0
page = 0.04
value = 50.0
texture_progress = SubResource("CanvasTexture_klxyk")

[node name="SanityBar" type="TextureProgressBar" parent="UI/Node2D"]
layout_mode = 0
offset_left = 17.0
offset_top = 14.0
offset_right = 81.0
offset_bottom = 17.0
mouse_filter = 2
max_value = 16.0
value = 8.0
texture_progress = SubResource("CanvasTexture_ohgur")

[node name="Monster" type="Sprite2D" parent="."]
position = Vector2(143, 121)
texture = SubResource("CanvasTexture_n1bsg")

[node name="Upper" type="StaticBody2D" parent="."]
position = Vector2(201, 209)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Upper"]
position = Vector2(-0.5, -11)
shape = SubResource("RectangleShape2D_svdcj")

[node name="Table" type="StaticBody2D" parent="."]
position = Vector2(201, 209)
collision_layer = 4

[node name="Table" type="Sprite2D" parent="Table"]
texture = SubResource("CanvasTexture_dgkbj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Table"]
position = Vector2(-1, 18)
shape = SubResource("RectangleShape2D_4satd")

[node name="Book" type="Area2D" parent="."]
position = Vector2(37, 197)
script = ExtResource("10_5juax")

[node name="BookSpot" type="Sprite2D" parent="Book"]
texture_filter = 1
position = Vector2(10, 6)
texture = ExtResource("14_q41w2")

[node name="Sprite2DBook" type="Sprite2D" parent="Book"]
unique_name_in_owner = true
position = Vector2(10, 3)
texture = SubResource("CanvasTexture_or7gx")

[node name="Sprite2DOverlay" type="Sprite2D" parent="Book"]
unique_name_in_owner = true
visible = false
texture_filter = 1
position = Vector2(86, -99)
texture = ExtResource("16_aju8d")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Book"]
position = Vector2(0, 1)
polygon = PackedVector2Array(-4, -18, -28, 8, -28, 19, 23, 19, 49, -7, 49, -18)

[node name="AudioStreamPlayerBookClose" type="AudioStreamPlayer" parent="Book"]
unique_name_in_owner = true
stream = ExtResource("16_xenet")

[node name="AudioStreamPlayerBookOpen" type="AudioStreamPlayer" parent="Book"]
unique_name_in_owner = true
stream = ExtResource("17_dwnyw")

[node name="Bottle4" type="CharacterBody2D" parent="."]
y_sort_enabled = true
position = Vector2(359, 155)
collision_layer = 8
collision_mask = 3
input_pickable = true
script = ExtResource("11_fxfq5")
hold_sound = ExtResource("22_1wlhp")
hold_texture = ExtResource("12_fbpnl")

[node name="CollisionShape2DCircle" type="CollisionShape2D" parent="Bottle4"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_08a4j")

[node name="Sprite2D" type="Sprite2D" parent="Bottle4"]
y_sort_enabled = true
texture_filter = 1
texture = ExtResource("9_fpdu2")

[node name="Bottle3" type="CharacterBody2D" parent="."]
y_sort_enabled = true
position = Vector2(315, 176)
collision_layer = 8
collision_mask = 3
input_pickable = true
script = ExtResource("11_fxfq5")
hold_sound = ExtResource("19_vhx3s")
hold_texture = ExtResource("13_fdd1i")

[node name="CollisionShape2DCircle" type="CollisionShape2D" parent="Bottle3"]
position = Vector2(0, 13)
shape = SubResource("CircleShape2D_y21k3")

[node name="CollisionShape2DCylinder" type="CollisionShape2D" parent="Bottle3"]
position = Vector2(0, -17)
shape = SubResource("RectangleShape2D_c07jn")

[node name="Sprite2D" type="Sprite2D" parent="Bottle3"]
y_sort_enabled = true
texture_filter = 1
texture = ExtResource("8_o604l")

[node name="Bottle2" type="CharacterBody2D" parent="."]
y_sort_enabled = true
position = Vector2(246, 177)
collision_layer = 8
collision_mask = 3
input_pickable = true
script = ExtResource("11_fxfq5")
hold_sound = ExtResource("25_u8pld")
hold_texture = ExtResource("14_bsjys")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Bottle2"]
polygon = PackedVector2Array(-13, 11, -24, -9, -10, -3, 0, -30, 10, -3, 24, -9, 13, 11, 23, 28, 0, 19, -23, 28)

[node name="Sprite2D" type="Sprite2D" parent="Bottle2"]
y_sort_enabled = true
texture_filter = 1
texture = ExtResource("10_h022f")

[node name="Bottle1" type="CharacterBody2D" parent="."]
y_sort_enabled = true
position = Vector2(284, 136)
collision_layer = 8
collision_mask = 3
input_pickable = true
script = ExtResource("11_fxfq5")
hold_sound = ExtResource("25_1qirx")
hold_texture = ExtResource("15_t8b5s")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Bottle1"]
polygon = PackedVector2Array(-20, 38, -8, -38, 9, -38, 20, 38)

[node name="Sprite2D" type="Sprite2D" parent="Bottle1"]
y_sort_enabled = true
texture_filter = 1
texture = ExtResource("9_ftjdy")

[node name="CupSmall" type="CharacterBody2D" parent="."]
y_sort_enabled = true
position = Vector2(202, 173)
collision_layer = 8
collision_mask = 5
input_pickable = true
script = ExtResource("11_fxfq5")
hold_sound = ExtResource("32_v6p5g")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="CupSmall"]
polygon = PackedVector2Array(-6, 8, -9, -8, 9, -8, 6, 8)

[node name="Sprite2D" type="Sprite2D" parent="CupSmall"]
texture_filter = 1
texture = ExtResource("15_83ufa")

[node name="CupMedium" type="CharacterBody2D" parent="."]
y_sort_enabled = true
position = Vector2(211, 129)
collision_layer = 8
collision_mask = 5
input_pickable = true
script = ExtResource("11_fxfq5")
hold_sound = ExtResource("32_v6p5g")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="CupMedium"]
polygon = PackedVector2Array(-11, 8, -12, -12, 12, -12, 11, 8, 5, 13, -5, 13)

[node name="Sprite2D" type="Sprite2D" parent="CupMedium"]
texture_filter = 1
texture = ExtResource("34_c6xdm")

[node name="CupLarge" type="CharacterBody2D" parent="."]
y_sort_enabled = true
position = Vector2(167, 155)
collision_layer = 8
collision_mask = 5
input_pickable = true
script = ExtResource("11_fxfq5")
hold_sound = ExtResource("32_v6p5g")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="CupLarge"]
polygon = PackedVector2Array(-12, 17, 18, 17, 15, -18, -9, -18, -9, -9, -17, -9, -18, 7, -10, 8)

[node name="Sprite2D" type="Sprite2D" parent="CupLarge"]
texture_filter = 1
texture = ExtResource("35_u16au")

[node name="Frame" type="StaticBody2D" parent="."]
collision_layer = 4

[node name="Frame" type="Sprite2D" parent="Frame"]
position = Vector2(200, 120)
texture = SubResource("CanvasTexture_p4c3i")

[node name="CollisionShape2DLeft" type="CollisionShape2D" parent="Frame"]
position = Vector2(3, 108.5)
shape = SubResource("RectangleShape2D_4fqae")

[node name="CollisionShape2DRight" type="CollisionShape2D" parent="Frame"]
position = Vector2(397.5, 108.5)
shape = SubResource("RectangleShape2D_4pb45")

[node name="Area2DOutOfBounds" type="Area2D" parent="."]
position = Vector2(213, 330)
collision_layer = 0
collision_mask = 8
script = ExtResource("24_jmn7c")

[node name="TeleportPoint" type="Node2D" parent="Area2DOutOfBounds"]
unique_name_in_owner = true
position = Vector2(-62, -395)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DOutOfBounds"]
visibility_layer = 16
shape = SubResource("RectangleShape2D_0u3q2")

[connection signal="mouse_entered" from="UI/Node2D" to="UI/Node2D" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="UI/Node2D" to="UI/Node2D" method="_on_mouse_exited"]
[connection signal="input_event" from="Book" to="Book" method="_on_input_event"]
[connection signal="body_entered" from="Area2DOutOfBounds" to="UI/Node2D" method="_on_area_2d_out_of_bounds_body_entered"]
[connection signal="body_entered" from="Area2DOutOfBounds" to="Area2DOutOfBounds" method="_on_body_entered"]
